--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "hardhat": "^2.9.5"
+  },
+  "dependencies": {
+    "glob": "7.2.0"
   }
 }
