--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@openzeppelin/contracts": "^4.6.0",
-    "hardhat": "^2.9.5"
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/node": "^17.0.33",
+    "ethers": "^5.6.6",
+    "hardhat": "^2.9.5",
+    "hardhat-deploy": "^0.11.4",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "glob": "7.2.0"
